--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,11 +32,11 @@ const metadata = {
       },
       { text: 'Learn more', href: '#features' },
     ]}
-    image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
+    image={{ src: '~/assets/images/catalyst-hero-1.png', alt: 'Catalyst Web Design Hero Image' }}
   >
     <Fragment slot="title">
       Free template for <span class="hidden xl:inline">creating websites with</span>
-      <span class="text-accent dark:text-white highlight"> Astro 4.0</span> + Tailwind CSS
+      <span class="text-accent dark:text-white highlight"> Catalyst Web Design</span> + Tailwind CSS
     </Fragment>
 
     <Fragment slot="subtitle">
