updating template name references to mikepeiman/catalyst

--- a/src/pages/homes/startup.astro
+++ b/src/pages/homes/startup.astro
@@ -28,7 +28,7 @@ const metadata = {
         variant: 'primary',
         target: '_blank',
         text: 'Get templates',
-        href: 'https://github.com/onwidget/astrowind',
+        href: 'https://github.com/mikepeiman/catalyst',
         icon: 'tabler:download',
       },
       { text: 'Learn more', href: '#features' },
@@ -37,11 +37,11 @@ const metadata = {
     <Fragment slot="title">
       Improve <span class="hidden sm:inline">the online presence of</span> your <span
         class="text-accent dark:text-white highlight">Startup</span
-      > with Astrowind templates
+      > with catalyst templates
     </Fragment>
 
     <Fragment slot="subtitle">
-      Step into the spotlight with <span class="font-semibold">Astrowind</span> templates, your pathway to fortifying your
+      Step into the spotlight with <span class="font-semibold">catalyst</span> templates, your pathway to fortifying your
       startup's digital footprint, fostering credibility, and expanding your reach.
     </Fragment>
 
@@ -70,7 +70,7 @@ const metadata = {
   <!-- Stats Widget ****************** -->
 
   <Stats
-    title="Discover the impressive impact of Astrowind"
+    title="Discover the impressive impact of catalyst"
     subtitle="The numbers below reflect the trust our users have placed in us and the remarkable outcomes we've helped them achieve."
     stats={[
       { title: 'Downloads', amount: '182K' },
@@ -84,7 +84,7 @@ const metadata = {
 
   <Brands
     title="Partnerships & Collaborations"
-    subtitle="At Astrowind, we believe in the power of collaboration to drive innovation and create exceptional experiences."
+    subtitle="At catalyst, we believe in the power of collaboration to drive innovation and create exceptional experiences."
     icons={[]}
     images={[
       {
@@ -302,7 +302,7 @@ const metadata = {
         variant: 'primary',
         target: '_blank',
         text: 'Get templates',
-        href: 'https://github.com/onwidget/astrowind',
+        href: 'https://github.com/mikepeiman/catalyst',
         icon: 'tabler:download',
       },
     ]}
