--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: 'catalyst — Free template for creating websites with Astro + Tailwind CSS',
   ignoreTitleTemplate: true,
 };
 ---
@@ -26,25 +26,25 @@ const metadata = {
       {
         variant: 'primary',
         text: 'Get template',
-        href: 'https://github.com/onwidget/astrowind',
+        href: 'https://github.com/mikepeiman/catalyst',
         target: '_blank',
         icon: 'tabler:download',
       },
       { text: 'Learn more', href: '#features' },
     ]}
-    image={{ src: '~/assets/images/catalyst-hero-1.png', alt: 'Catalyst Web Design Hero Image' }}
+    image={{ src: '~/assets/images/catalyst-hero-1.png', alt: 'catalyst Design Hero Image' }}
   >
     <Fragment slot="title">
       Free template for <span class="hidden xl:inline">creating websites with</span>
-      <span class="text-accent dark:text-white highlight"> Catalyst Web Design</span> + Tailwind CSS
+      <span class="text-accent dark:text-white highlight"> catalyst Design</span> + Tailwind CSS
     </Fragment>
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">AstroWind</span> is a free, customizable and production-ready template for Astro 4.0
+        <span class="font-semibold">catalyst</span> is a free, customizable and production-ready template for Astro 4.0
         + Tailwind CSS.</span
       >
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">AstroWind: Production-ready.</span>
+      <span class="block mb-1 sm:hidden font-bold text-blue-600">catalyst: Production-ready.</span>
       Suitable for Startups, Small Business, SaaS websites, Professional Portfolios, Marketing websites, Landing Pages &
       Blogs.
     </Fragment>
@@ -59,7 +59,7 @@ const metadata = {
   <Features
     id="features"
     tagline="Features"
-    title="What you get with AstroWind"
+    title="What you get with catalyst"
     subtitle="One of the most professional and comprehensive templates currently on the market. Most starred & forked Astro theme in 2022."
     items={[
       {
@@ -106,7 +106,7 @@ const metadata = {
   <Content
     isReversed
     tagline="Inside template"
-    title="AstroWind's Blueprint: Fun Meets Functionality!"
+    title="catalyst's Blueprint: Fun Meets Functionality!"
     items={[
       {
         title: 'Built on top of Astro 4.0',
@@ -195,11 +195,11 @@ const metadata = {
       {
         title: 'Time and resource efficiency',
         description:
-          'Skip the time-consuming process of building a website from scratch and launch your online presence sooner with AstroWind.',
+          'Skip the time-consuming process of building a website from scratch and launch your online presence sooner with catalyst.',
       },
       {
         title: 'Community support',
-        description: `Join the growing AstroWind community for insights, resources, and assistance, ensuring you're never alone on your web development journey.`,
+        description: `Join the growing catalyst community for insights, resources, and assistance, ensuring you're never alone on your web development journey.`,
       },
     ]}
     image={{
@@ -217,12 +217,12 @@ const metadata = {
   <!-- Steps Widget ****************** -->
 
   <Steps
-    title="Get your dream website up and running in no time with AstroWind."
+    title="Get your dream website up and running in no time with catalyst."
     items={[
       {
         title: 'Step 1: <span class="font-medium">Download</span>',
         description:
-          "Kickstart with GitHub! Either fork the AstroWind template or simply click 'Use this template'. Your canvas awaits, ready for your digital masterpiece. In just a few clicks, you've already set the foundation.",
+          "Kickstart with GitHub! Either fork the catalyst template or simply click 'Use this template'. Your canvas awaits, ready for your digital masterpiece. In just a few clicks, you've already set the foundation.",
         icon: 'tabler:package',
       },
       {
@@ -234,7 +234,7 @@ const metadata = {
       {
         title: 'Step 3: <span class="font-medium">Customize styles</span>',
         description:
-          'Give it your personal touch. Tailor colors, fonts, and layouts until it feels just right. Your unique flair, amplified by AstroWind! Precision in design ensures a seamless user experience.',
+          'Give it your personal touch. Tailor colors, fonts, and layouts until it feels just right. Your unique flair, amplified by catalyst! Precision in design ensures a seamless user experience.',
         icon: 'tabler:paint',
       },
       {
@@ -316,7 +316,7 @@ const metadata = {
 
   <BlogLatestPosts
     title="Find out more content in our Blog"
-    information={`The blog is used to display AstroWind documentation.
+    information={`The blog is used to display catalyst documentation.
                         Each new article will be an important step that you will need to know to be an expert in creating a website using Astro + Tailwind CSS.
                         Astro is a very interesting technology. Thanks.
                 `}
@@ -326,12 +326,12 @@ const metadata = {
 
   <FAQs
     title="Frequently Asked Questions"
-    subtitle="Dive into the following questions to gain insights into the powerful features that AstroWind offers and how it can elevate your web development journey."
+    subtitle="Dive into the following questions to gain insights into the powerful features that catalyst offers and how it can elevate your web development journey."
     tagline="FAQs"
     classes={{ container: 'max-w-6xl' }}
     items={[
       {
-        title: 'Why AstroWind?',
+        title: 'Why catalyst?',
         description:
           "Michael Knight a young loner on a crusade to champion the cause of the innocent. The helpless. The powerless in a world of criminals who operate above the law. Here he comes Here comes Speed Racer. He's a demon on wheels.",
       },
@@ -381,7 +381,7 @@ const metadata = {
       {
         variant: 'primary',
         text: 'Get template',
-        href: 'https://github.com/onwidget/astrowind',
+        href: 'https://github.com/mikepeiman/catalyst',
         target: '_blank',
         icon: 'tabler:download',
       },
