much content update, some new global styles

--- a/src/pages/homes/mobile-app.astro
+++ b/src/pages/homes/mobile-app.astro
@@ -197,7 +197,7 @@ const metadata = {
   <Stats
     title="Statistics of our app"
     stats={[
-      { amount: '20K', icon: 'tabler:download' },
+      { amount: '20K', icon: 'tabler:bolt' },
       { amount: '18.5K', icon: 'tabler:users' },
       { amount: '4.7', icon: 'tabler:user-star' },
     ]}
