--- a/src/pages/homes/startup.astro
+++ b/src/pages/homes/startup.astro
@@ -27,9 +27,9 @@ const metadata = {
       {
         variant: 'primary',
         target: '_blank',
-        text: 'Get templates',
+        text: 'Get A Quotes',
         href: 'https://github.com/mikepeiman/catalyst',
-        icon: 'tabler:download',
+        icon: 'tabler:bolt',
       },
       { text: 'Learn more', href: '#features' },
     ]}
@@ -301,9 +301,9 @@ const metadata = {
       {
         variant: 'primary',
         target: '_blank',
-        text: 'Get templates',
+        text: 'Get A Quotes',
         href: 'https://github.com/mikepeiman/catalyst',
-        icon: 'tabler:download',
+        icon: 'tabler:bolt',
       },
     ]}
   >
