--- a/src/pages/landing/pre-launch.astro
+++ b/src/pages/landing/pre-launch.astro
@@ -34,7 +34,7 @@ const metadata = {
         variant: 'primary',
         text: 'Download Template',
         href: 'https://github.com/mikepeiman/catalyst',
-        icon: 'tabler:download',
+        icon: 'tabler:bolt',
       },
     ]}
   />
