updated some icons

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -114,17 +114,22 @@ const metadata = {
     items={[
       {
         title: 'Integrity',
+        icon: 'tabler:shield-filled',
+        classes: { icon: 'bg-black/80 dark:bg-white/80 text-blue-400' },
         description:
           'At Catalyst Design, we uphold the highest standards of honesty, reliability, and transparency in all our endeavors.',
       },
       {
         title: 'Excellence',
+        icon: 'tabler:award-filled',
+        classes: { icon: 'bg-black/80 dark:bg-white/80 text-yellow-400' },
         description:
           'We strive to deliver exceptional websites that exceed client expectations and provide a seamless user experience.',
-      },
-      {
+          },
+          {
         title: 'Care',
-        icon: 'tabler:heart',
+        icon: 'tabler:heart-filled',
+        classes: { icon: 'bg-black/80 dark:bg-white/80 text-red-400 dark:text-red-400' },
         description:
           'Every aspect of our work is guided by a deep commitment to empathy, attention to detail, and a genuine desire to serve.',
       },
@@ -135,8 +140,8 @@ const metadata = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">An Experience That You Will Enjoy</h3>
-      Gain a competitive advantage by incorporating industry leading practices
+      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">An Ethos of Service</h3>
+      We are here to help your business win, and to make your experience as smooth as possible.
     </Fragment>
 
     <Fragment slot="bg">
