added Inter font, updated menu

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,3 +1,4 @@
+@import './global.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -31,5 +32,11 @@
 @font-face {
 	font-family: 'Playfair Display';
 	src: url('/fonts/PlayfairDisplay-Italic.ttf');
+	font-display: swap;
+}
+/* any theme */
+@font-face {
+	font-family: 'Inter';
+	src: url('/fonts/Inter.ttf');
 	font-display: swap;
 }
